[package]
authors = ["emmanuel lonca <lonca@cril.fr>"]
license = "LGPL-3.0-or-later"
name = "ipafair-sys"
version = "1.0.0"
description = "Rust bindings for the IPAFAIR API."
categories = ["external-ffi-bindings", "science"]
keywords = ["argumentation", "frameworks", "AF", "IPAFAIR"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.61.0"
